tests/integration/seed/predictions/invalid/ner+classif4.jsonlines
{"uuid": "1831440", "annotations": {"Sentiment": {"labels":[{"value": "pos", "proba": 0.999}] } ,"Entities": {"entities": [{"value": "FOO", "start": 23, "end": 33 }] } } }
